--- a/date/2025-11/page-2.htm
+++ b/date/2025-11/page-2.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-node-subscribe-links.htm" title="VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-19-node-share-links.htm" title="VPN百科 - 11月19日18.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 11月19日18.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-3-top-vpn.htm" title="VPN百科 - 12月3日20M/S|免费Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 12月3日20M/S|免费Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-23-vpn-github.htm" title="VPN百科 - 11月23日20.4M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 11月23日20.4M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-3-vpn-free.htm" title="VPN百科 - 1月3日20.7M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 1月3日20.7M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-8-vpn-free.htm" title="VPN百科 - 12月8日21.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点订阅节点分享">VPN百科 - 12月8日21.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-22-top-vpn-node.htm" title="VPN百科 - 11月22日18.7M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点订阅节点分享">VPN百科 - 11月22日18.7M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-6-vpn-proxy.htm" title="VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-19-top-vpn.htm" title="VPN百科 - 12月19日18.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点订阅节点分享">VPN百科 - 12月19日18.9M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-22-node-share.htm" title="VPN百科 - 12月22日21.1M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅节点分享">VPN百科 - 12月22日21.1M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-15-top-vpn.htm" title="VPN百科 - 11月15日20.5M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享">VPN百科 - 11月15日20.5M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-26-free-vpn.htm" title="VPN百科 - 11月26日20.3M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 11月26日20.3M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-12-2-share-vpn.htm" title="VPN百科 - 12月2日18.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 12月2日18.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-20-top-vpn.htm" title="VPN百科 - 11月20日19.3M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 11月20日19.3M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-top-vpn.htm" title="VPN百科 - 11月11日20.1M/S|免费Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 11月11日20.1M/S|免费Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-26-free-vpn.htm" title="VPN百科 - 11月26日20.3M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 11月26日20.3M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-15-top-vpn.htm" title="VPN百科 - 11月15日20.5M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享">VPN百科 - 11月15日20.5M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-21-free-vpn.htm" title="VPN百科 - 12月21日22.9M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅节点分享">VPN百科 - 12月21日22.9M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
