--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -115,49 +115,64 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-08">
                         <div class="col-md-3">
                             <div class="about_img">
-                                <a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">
+                                <a href="/free-nodes/2025-11-8-free-node-subscribe-links.htm" title="VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</h3>
+                            <a href="/free-nodes/2025-11-8-free-node-subscribe-links.htm" title="VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享</h3>
                             </a>
-                            <p class="about_text">这一次的节点更新覆盖了香港、欧洲、加拿大、韩国、美国、新加坡、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="about_text">这一次的节点更新覆盖了日本、欧洲、韩国、美国、新加坡、香港、加拿大等地区,最高速度可达19.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-07">
                         <div class="col-md-3">
                             <div class="about_img">
-                                <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享">
+                                <a href="/free-nodes/2025-11-7-mianfei-vpn.htm" title="VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享</h3>
+                            <a href="/free-nodes/2025-11-7-mianfei-vpn.htm" title="VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享</h3>
                             </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、香港、新加坡、欧洲、日本、加拿大、韩国等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="about_text">这一次的节点更新覆盖了欧洲、新加坡、加拿大、香港、韩国、美国、日本等地区,最高速度可达23 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-06">
                         <div class="col-md-3">
                             <div class="about_img">
-                                <a href="/free-nodes/2025-10-3-node-share-links.htm" title="VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8945162c010840446e9af908a3d6269d.webp" alt="VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享">
+                                <a href="/free-nodes/2025-11-6-vpn-proxy.htm" title="VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-9">
-                            <a href="/free-nodes/2025-10-3-node-share-links.htm" title="VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享</h3>
+                            <a href="/free-nodes/2025-11-6-vpn-proxy.htm" title="VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享</h3>
                             </a>
-                            <p class="about_text">这一次的节点更新覆盖了香港、新加坡、加拿大、美国、欧洲、日本、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="about_text">这一次的节点更新覆盖了日本、欧洲、香港、韩国、新加坡、加拿大、美国等地区,最高速度可达22 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-11-05">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-11-5-vpn-free.htm" title="VPN百科 - 11月5日19.7M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="VPN百科 - 11月5日19.7M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-11-5-vpn-free.htm" title="VPN百科 - 11月5日19.7M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 11月5日19.7M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、美国、韩国、加拿大、欧洲、日本、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
                                         
@@ -169,16 +184,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-mianfei-vpn.htm" title="VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-29-node-share-links.htm" title="VPN百科 - 11月29日19.6M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 11月29日19.6M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-20-top-vpn.htm" title="VPN百科 - 11月20日19.3M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 11月20日19.3M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-3-vpn-node.htm" title="VPN百科 - 11月3日21.1M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 11月3日21.1M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-vpn-proxy.htm" title="VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享">VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-19-node-share-links.htm" title="VPN百科 - 11月19日18.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 11月19日18.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-vpn-github.htm" title="VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-node-subscribe-links.htm" title="VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 11月8日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-30-vpn-proxy.htm" title="VPN百科 - 11月30日21.8M/S|免费Clash节点/Singbox节点/SSR节点/V2ray节点/Shadowrocket节点订阅节点分享">VPN百科 - 11月30日21.8M/S|免费Clash节点/Singbox节点/SSR节点/V2ray节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-17-share-vpn.htm" title="VPN百科 - 10月17日19.1M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点订阅节点分享">VPN百科 - 10月17日19.1M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-vpn-free.htm" title="VPN百科 - 12月17日18.3M/S|免费SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点订阅节点分享">VPN百科 - 12月17日18.3M/S|免费SSR节点/Singbox节点/Shadowrocket节点/V2ray节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-vpn-free.htm" title="VPN百科 - 12月31日22.7M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 12月31日22.7M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-6-vpn-free.htm" title="VPN百科 - 12月6日19.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享">VPN百科 - 12月6日19.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-vpn-proxy.htm" title="VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-3-vpn-free.htm" title="VPN百科 - 1月3日20.7M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 1月3日20.7M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-25-vpn-proxy.htm" title="VPN百科 - 12月25日20.2M/S|免费Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 12月25日20.2M/S|免费Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-27-free-vpn-node.htm" title="VPN百科 - 11月27日19.9M/S|免费V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 11月27日19.9M/S|免费V2ray节点/SSR节点/Singbox节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-23-vpn-github.htm" title="VPN百科 - 11月23日20.4M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 11月23日20.4M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-1-mianfei-vpn.htm" title="VPN百科 - 12月1日18.6M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅节点分享">VPN百科 - 12月1日18.6M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-15-vpn-proxy.htm" title="VPN百科 - 12月15日18.1M/S|免费Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/SSR节点订阅节点分享">VPN百科 - 12月15日18.1M/S|免费Singbox节点/Clash节点/Shadowrocket节点/V2ray节点/SSR节点订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -190,10 +205,13 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                     </ul>
     </div>
